--- a/index.html
+++ b/index.html
@@ -41,6 +41,27 @@
         </div>
     </div>
 
+    <div class="stickyHeader" id="stickyHeader">
+        <div class="headerItems">
+            <p>DwiKurniaPutra<b>.</b></p>
+            <ul>
+                <a href="#" class="active">Home</a>
+                <a href="page/resume.html">Resume</a>
+                <a href="#">Portfolio</a>
+                <a href="#">Blog</a>
+                <a href="page/about.html">About</a>
+                <a href="page/contact.html">Contact Us</a>
+            </ul>
+        </div>
+    </div>
+
+    <div class="stickyToggle" id="stickyToggle">
+        <div class="toggleItems">
+            <p>DwiKurniaPutra<b>.</b></p>
+            <a onclick="openNav()" id="menuToggle" class="menuToggle"><img src="img/toggle.png"></a>
+        </div>
+    </div>
+
     <div id="stickySocials">
         <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/dwikrnputra/"><i
                 class="fab fa-linkedin-in"></i></a>
@@ -76,7 +97,7 @@
                     <p>DwiKurniaPutra<b>.</b></p>
                 </a>
                 
-                <a onclick="openNav()" id="toggle" class="menuIcon"><img src="img/toggle.png"></i></a>
+                <a onclick="openNav()" id="toggle" class="menuIcon"><img src="img/toggle.png"></a>
 
                 <ul>
                     <a href="#" class="active">Home</a>
@@ -200,7 +221,7 @@
             </div>
         </section>
     </div>
-    <div class="backgroundView">
+    <div class="backgroundView2">
         <div class="container">
         <footer class="wow fadeIn">
             <div class="footerTop">
