--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 </div>
                 <div class="bodyContact">
                     <div class="formContact">
-                        <form target="_blank" action="https://formsubmit.co/dwikrnputra22@gmail.com" method="POST">
+                        <form id="formMessage" target="_blank" action="https://formsubmit.co/dwikrnputra22@gmail.com" method="POST">
                             <div class="wow fadeInLeft">
                                 <input type="hidden" name="_subject" value="New Email">
                                 <input type="text" name="name" class="form-control" placeholder="Full Name" required>
@@ -213,7 +213,7 @@
                                 <input type="hidden" name="_captcha" value="false">
                             </div>
                             <div class="wow fadeInRight">
-                                <button type="submit" class="btncontactus">Send</button>
+                                <button onclick="submitForm()" type="submit" class="btncontactus">Send</button>
                             </div>
                         </form>
                     </div>
