--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" href="img/logopebongg.png">
+<!--     <link rel="shortcut icon" href="img/logopebongg.png"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>DwiKurniaPutra</title>
+<!--     <title>DwiKurniaPutra</title> -->
+    
+    <!-- Primary Meta Tags -->
+    <title>DwiKurniaPutra. | Personal Pages</title>
+    <meta name="title" content="DwiKurniaPutra. | Personal Pages">
+    <meta name="description" content="is a static website using the Github Repository, precisely the Github Pages environment that uses HTML, CSS and Javascript language technologies without using frameworks. This personal page contain information about me such as resume, portfolio, blog and so on.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pebongg.github.io/">
+    <meta property="og:title" content="DwiKurniaPutra. | Personal Pages">
+    <meta property="og:description" content="is a static website using the Github Repository, precisely the Github Pages environment that uses HTML, CSS and Javascript language technologies without using frameworks. This personal page contain information about me such as resume, portfolio, blog and so on.">
+    <meta property="og:image" content="https://pebongg.github.io/img/dwikurniaputra1200x628.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://pebongg.github.io/">
+    <meta property="twitter:title" content="DwiKurniaPutra. | Personal Pages">
+    <meta property="twitter:description" content="is a static website using the Github Repository, precisely the Github Pages environment that uses HTML, CSS and Javascript language technologies without using frameworks. This personal page contain information about me such as resume, portfolio, blog and so on.">
+    <meta property="twitter:image" content="https://pebongg.github.io/img/dwikurniaputra1200x628.jpg">
     
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/global.css">
