--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!--     <link rel="shortcut icon" href="img/logopebongg.png"> -->
+    <link rel="shortcut icon" href="img/logopebongg.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<!--     <title>DwiKurniaPutra</title> -->
     
     <!-- Primary Meta Tags -->
     <title>DwiKurniaPutra. | Personal Pages</title>
