--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a href="index.html">Home</a>
             <a href="page/resume.html">Resume</a>
             <a href="#">Portfolio</a>
-            <a href="#">Blog</a>
+            <a href="page/blog.html">Blog</a>
             <a href="page/about.html">About</a>
             <a href="page/contact.html">Contact</a>
         </ul>
@@ -113,7 +113,7 @@
                         <h2>Blog</h2>
                         <p>Blog contains information about the content or articles that I created to provide information to readers. The blog that
                         I make is usually about applications and microcontroller-based prototypes</p>
-                        <a>
+                        <a href="page/blog.html">
                             Read More
                         </a>
                     </div>
@@ -189,7 +189,7 @@
                     <a href="index.html">Home</a>
                     <a href="page/resume.html">Resume</a>
                     <a href="#">Portfolio</a>
-                    <a href="#">Blog</a>
+                    <a href="page/blog.html">Blog</a>
                     <a href="page/about.html">About</a>
                     <a href="page/contact.html">Contact</a>
                 </ul>
