--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <ul>
             <a href="index.html">Home</a>
             <a href="page/resume.html">Resume</a>
-            <a href="#">Portfolio</a>
+            <a href="page/portfolio.html">Portfolio</a>
             <a href="page/blog.html">Blog</a>
             <a href="page/about.html">About</a>
             <a href="page/contact.html">Contact</a>
@@ -104,7 +104,7 @@
                         <h2>Portfolio</h2>
                         <p>Portfolio contains information about the results of my work, achievements or what I have made while I am working,
                         continuing my education and filling my spare time</p>
-                        <a>
+                        <a href="page/portfolio.html">
                             Read More
                         </a>
                     </div>
@@ -138,7 +138,44 @@
                     <b>Warm regards</b>
                 </div>
             </div>
-           <div class="contact">
+            <div class="socialMedia">
+                <div class="headSocial wow fadeIn">
+                    <h1>Social Media</h1>
+                    <h3>Online Interaction</h3>
+                </div>
+                <hr>
+            </div>
+        </section>
+    </div>
+    <div class="backgroundView">
+        <div class="container">
+            <div class="socialMedia2 wow fadeInDown">
+                <a target="blank" href="https://www.linkedin.com/in/dwikrnputra/" class="socialContent">
+                    <i class="fab fa-linkedin-in"></i>
+                    <p>Linkedin</p>
+                </a>
+                <a target="blank" href="https://github.com/pebongg" class="socialContent">
+                    <i class="fab fa-github"></i>
+                    <p>Github</p>
+                </a>
+                <a target="blank" href="https://dribbble.com/dwikrnputra22" class="socialContent">
+                    <i class="fab fa-dribbble"></i>
+                    <p>Dribbble</p>
+                </a>
+                <a target="blank" href="https://www.instagram.com/dwikrnputra/" class="socialContent">
+                    <i class="fab fa-instagram"></i>
+                    <p>Instagram</p>
+                </a>
+                <a target="blank" href="https://www.youtube.com/channel/UCIT-1wO_UTj5wRtGVnZA7Sg" class="socialContent">
+                    <i class="fab fa-youtube"></i>
+                    <p>Youtube</p>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <section>
+            <div class="contact">
                 <div class="headerContact wow fadeIn">
                     <h1>Contact Us</h1>
                     <h3>Get in touch</h3>
@@ -188,17 +225,17 @@
                 <ul class="menuF">
                     <a href="index.html">Home</a>
                     <a href="page/resume.html">Resume</a>
-                    <a href="#">Portfolio</a>
+                    <a href="page/portfolio.html">Portfolio</a>
                     <a href="page/blog.html">Blog</a>
                     <a href="page/about.html">About</a>
                     <a href="page/contact.html">Contact</a>
                 </ul>
                     <ul class="socials2">
                         <a target="_blank" href="https://www.linkedin.com/in/dwikrnputra/"><i class="fab fa-linkedin-in"></i></a>
-                        <a target="_blank" href="https://www.instagram.com/dwikrnputra/"><i class="fab fa-instagram"></i></a>
-                        <a target="_blank" href="https://www.facebook.com/pebongg"><i class="fab fa-facebook-f"></i></a>
                         <a target="_blank" href="https://github.com/pebongg"><i class="fab fa-github"></i></a>
-                        <a target="_blank" href="https://pebongg.wordpress.com/"><i class="fab fa-wordpress-simple"></i></a>
+                        <a target="_blank" href="https://dribbble.com/dwikrnputra22"><i class="fab fa-dribbble"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/dwikrnputra/"><i class="fab fa-instagram"></i></a>
+                        <a target="_blank" href="https://www.youtube.com/channel/UCIT-1wO_UTj5wRtGVnZA7Sg"><i class="fab fa-youtube"></i></a>
                     </ul>
             </div>
             <div class="footerBottom">
